Fixed Overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11133,7 +11133,6 @@ html {
       justify-content: flex-start;
       align-items: flex-start;
       background-color: inherit;
-      height: 100%;
       width: 100%;
       font-size: 1rem;
       text-align: left;
